a lot of prop and nomination and vote calcs
