# src/routes/proposalsRoutes.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import { validateProposal } from '../middlewares/validationMiddleware.js';
 import { submitProposal, fetchAllProposals, modifyProposal, removeProposal, fetchProposalById } from '../controllers/proposalsController.js';
+import { qualifyProposal } from '../controllers/proposalQualificationController.js';
 
 const router = Router();
 
@@ -9,5 +10,7 @@ router.get('/proposals', fetchAllProposals);
 router.put('/proposals/:proposalId', modifyProposal);
 router.delete('/proposals/:proposalId', removeProposal);
 router.get('/proposals/:id', fetchProposalById);
+
+router.post('/qualifyProposal/:proposalId', qualifyProposal);
 
 export default router; 
