# src/types/ProposalNomination.ts
@@ -1,6 +1,9 @@
 export interface ProposalNomination {
   id: number;
   proposalId: number;
-  candidateId: number;
   nominatedAt: Date;
+  hash: string;
+  toAddress: string;
+  amountSent: number;
+  validVote: boolean;
 } 
